# androix-xserver

./: config.status-works  configure.ac
android/: .gitignore  .xkb.txt.swp  AndroidManifest.xml  README  build.sh  package.sh  xkb.txt  xkbcomp
android/jni/: Android.mk  android.h  androix.c  fakejni.c  hello-jni.c  locking.c  native.c
android/lib/armeabi/usr/share/X11/xkb/: geometry.dir  keymap.dir  symbols.dir
android/lib/armeabi/usr/share/X11/xkb/keycodes/: evdev
android/lib/armeabi/usr/share/X11/xkb/rules/: base  evdev.lst
android/lib/armeabi/usr/share/X11/xkb/symbols/: inet  nbsp  ru  us
android/lib/armeabi/usr/share/X11/xkb/symbols/macintosh_vndr/: de  dk  nl  se
android/libs/armeabi/: gdb.setup
android/res/values/: strings.xml
android/src/net/ofn/homeip/androix/: AndroiX.java  AndroiXBlitView.java  AndroiXDixMain.java  AndroiXFakeLib.java  AndroiXLib.java  AndroiXService.java
android/usr/share/X11/xkb/: keycodes.dir
android/usr/share/X11/xkb/rules/: base.xml  evdev
android/usr/share/X11/xkb/symbols/: cz  fr  il  in  la
android/usr/share/X11/xkb/symbols/macintosh_vndr/: fi  fr  gb  is  it  no  pt  us
android/xandroix/: .gitignore  Makefile  stub.c  xandroix.c
dix/: .devices.c.swp  .getevents.c.swp  Makefile.am  getevents.c  main.c  mainlib.c  window.c
fb/: fbscreen.c
hw/: Makefile.am
hw/android/: .classpath  .gitignore  .project  AndroidManifest.xml  Makefile.am  android.h  androidevents.h  build.sh  callback.c  damage.c  events.c  full.sh  kdbuild.sh  native.c  native.sh  old-build.sh  old-package.sh  package.sh  private.h  screen.c  screen.h  startup.c  vfb.sh  vfbglibcarm.sh
hw/android/jni/: Android.mk  androix.c  locking.c  native.c
hw/android/libs/armeabi/: gdb.setup
hw/android/res/values/: strings.xml
hw/android/src/net/homeip/ofn/androix/: AndroiXBlitView.java  AndroiXLib.java  AndroiXService.java
hw/android/src/net/ofn/homeip/androix/: AndroiXDixMain.java
hw/android/tests/: build.xml  local.properties
hw/android/xandroix/: .gitignore  Android.mk  Makefile  Makefile.am  Makefile.native  Makefile.old  andmain.c  inputgen.c  inputstress.c  inputstubs.c  stub.c  test.sh  xandroix.c  xandroixinputgen.c  xandroixinputkeypress.c  xandroixinputstress.c
hw/android/xfakelib/: .gitignore  xfakelibdynamic
hw/kdrive/: Makefile.am
hw/kdrive/android/: Makefile.am  android.c  callback.c  fakelib.c  fakelibinit.c  init.c  kbd.c  kdandroid.h  main6.c  native.c  native.h  os.c  private.h
hw/kdrive/fakelib/: .androiderr.c.swp  .gitignore  .main3.c.swp  Makefile.am  Makefile.am-xfakelib  Xfakelibthreaded  andmain.c  androiderr.c  andtest.c  main.c  main2  main2.c  main3  main3.c  main4  main4.c  main5.c  os.c
hw/kdrive/src/: kinput.c
hw/vfb/: Makefile.am  static.sh
include/: dix-config.h.in
mi/: mieq.c  miscrinit.c
os/: log.c  utils.c
